[package]
name = "mc-map"
version = "0.1.0"
authors = ["Reilly Tucker Siemens <reilly@tuckersiemens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "*"
serde = "*"
serde_json = "*"
flate2 = "*"
thiserror = "1.0"
